# simple-chip8-emu

./: CHIP8-Details.md  Cargo.toml  NOTES.md  README.md  USAGE.md  flake.nix  test_modes.sh
.github/: copilot-instructions.md
src/: main.rs  simple_chip_emulator.rs
src/components/: display.rs  gui_display.rs  mod.rs  tui_display.rs
src/hardware/: display.rs  memory.rs  registers.rs  sound.rs  timer.rs
src/tui/: mod.rs  tui_display.rs
